showing now the policy number

--- a/ice-repo/definitions/insis/definitions/dashboard/definitions/products/definitions/customer/pages/home.yml
+++ b/ice-repo/definitions/insis/definitions/dashboard/definitions/products/definitions/customer/pages/home.yml
@@ -26,6 +26,7 @@ page:
                     size.xs: auto
                     size.sm: auto
                     elements:
+                      - name: quotes~policy-number
                       - name: quotes~product.name
                     align: center
                   - size: 20%
