--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/offer.accept.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/offer.accept.yml
@@ -2,5 +2,7 @@ action:
   execution:
     - IntegrationExecutionRule:
         integration: application.register
-    - NavigateToPageExecutionRule:
-        page: 2.application.details
+    - NavigateToDefinitionExecutionRule:
+        dynIdElement: policy.contract.policy-id
+        page: 2.application.detail
+        definition: insis.products.life.risks.tl2121.term-life.quote-buy.customer
