--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/offer.accept.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/offer.accept.yml
@@ -4,5 +4,5 @@ action:
         integration: application.register
     - NavigateToDefinitionExecutionRule:
         dynIdElement: policy.contract.policy-id
-        page: 2.application.detail
+        page: 2.application.details
         definition: insis.products.life.risks.tl2121.term-life.quote-buy.customer
