Fix navigate back to all policies in agent qutoation

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/navigate.back.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/navigate.back.yml
@@ -1,5 +1,5 @@
 action:
   execution:
     - NavigateToUrlExecutionRule:
-        url: /ice/insis.dashboard.policies.customer/home
+        url: /ice/insis.dashboard.policies.agent/home
         definition: ''
