--- a/ice-repo/definitions/chart-dev/pages/new-page.yml
+++ b/ice-repo/definitions/chart-dev/pages/new-page.yml
@@ -14,9 +14,7 @@ page:
       label: Fetch data
     - component:
         InsisChart:
-          elements:
-            - mydata~expected-fund-return
-            - mydata~actual-fund-return
+          datastorePath: chart
           label: mydata~labels
           dataAxis: yAxis
           title: Test-Title
