--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/offer.accept.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/customer/actions/offer.accept.yml
@@ -1,7 +1,7 @@
 action:
   execution:
     - IntegrationExecutionRule:
-        integration: application.register
+        integration: quotation.register
     - NavigateToDefinitionExecutionRule:
         dynIdElement: policy.contract.policy-id
         page: 2.application.details
