--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/quote.save.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/quote.save.yml
@@ -7,6 +7,14 @@ integration:
       dateTimeFormat: 'YYYY-MM-DDThh:mm:ss'
       extends: life.insis-engagement-quote.save
       out:
+        - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[0].FieldName
+          value: attrn1
+        - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[0].FieldValue
+          element: policy.contract.custom.interest-rate
+        - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[1].FieldName
+          value: attrc1
+        - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[1].FieldValue
+          element: policy.contract.custom.decrease-mode
         - fromIdx:
             array: datamodel.policy.insured.person-objects
           toIdx:
@@ -44,20 +52,6 @@ integration:
               payload: 'Policies.Policy[0].Insureds.Insured[n].Questionary.Question[n].Answer'
         - fromIdx:
             array: datamodel.policy.insured.person-objects
-          toIdx:
-            array: 'payload.Policies.Policy[0].Insureds.Insured'
-            useSourceIndex: true
-            toIdx:
-              array: Questionary.Question
-              append: true
-          mappings:
-            - value: 'Q_07.1'
-              payload: 'Policies.Policy[0].Insureds.Insured[n].Questionary.Question[n].ID'
-            - element: policy.insured.person-objects~question.q-07-1
-              payload: 'Policies.Policy[0].Insureds.Insured[n].Questionary.Question[n].Answer'
-        - fromIdx:
-            array: datamodel.policy.insured.person-objects
-            condition: cover.death-any.active == true
           toIdx:
             array: payload.Policies.Policy[0].Insureds.Insured
             useSourceIndex: true
