--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/risks.life.insis-engagement-quote.save.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/risks.life.insis-engagement-quote.save.yml
@@ -7,6 +7,15 @@ integration:
       dateTimeFormat: 'YYYY-MM-DDThh:mm:ss'
       extends: life.insis-engagement-quote.save
       in:
+        - mappings:
+            - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[0].FieldName
+              value: attrn1
+            - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[0].FieldValue
+              element: policy.contract.custom.interest-rate
+            - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[1].FieldName
+              value: attrc1
+            - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[1].FieldValue
+              element: policy.contract.custom.decrease-mode
         - toIdx:
             index: '[0]'
           mappings:
@@ -185,7 +194,6 @@ integration:
               payload: 'Policies.Policy[0].Insureds.Insured[n].Questionary.Question[n].Answer'
         - fromIdx:
             array: datamodel.policy.insured.person-objects
-            condition: cover.death-any.active == true
           toIdx:
             array: payload.Policies.Policy[0].Insureds.Insured
             useSourceIndex: true
