--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/risks.life.insis-policy.save.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/integrations/risks.life.insis-policy.save.yml
@@ -7,6 +7,15 @@ integration:
       extends: life.insis-policy.save
       in: {}
       out:
+        - mappings:
+          - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[0].FieldName
+            value: attrn1
+          - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[0].FieldValue
+            element: policy.contract.custom.interest-rate
+          - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[1].FieldName
+            value: attrc1
+          - payload: Client.Entity.PersonalData.CustomProperties.CustomProperty[1].FieldValue
+            element: policy.contract.custom.decrease-mode
         - fromIdx:
             array: datamodel.policy.insured.person-objects
           toIdx:
