Allow loading of the customer quote from the agent

--- a/ice-repo/definitions/insis/definitions/person/definitions/client/dts/person.policies.activity.view-more.yml
+++ b/ice-repo/definitions/insis/definitions/person/definitions/client/dts/person.policies.activity.view-more.yml
@@ -60,7 +60,7 @@ dt:
       outputs:
         - insis.products.life.risks.tl2121.term-life.quote-buy.agent/1.quote.covers
         -
-        -
+        - person.pid
         - person.policies~engagement-id
     - inputs:
         - 2121
@@ -68,5 +68,5 @@ dt:
       outputs:
         - insis.products.life.risks.tl2121.term-life.quote-buy.agent/1.quote.covers
         - person.policies~policy-id
-        -
+        - person.pid
         -
