Fix loading of the quote for the agent

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/actions/offer.load.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/actions/offer.load.yml
@@ -8,4 +8,5 @@ action:
   condition:
     InsisHasDatastoreValue:
       path: >-
-        insis.products.life.risks.tl2121.term-life.quote-buy.customer.query.engagementId
+        query.engagementId
+      scopeToDefinition: true
