Fixes to the agent quotation and allow accepting the quote from the agent

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/sections/calculate-and-recalculate.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/sections/calculate-and-recalculate.yml
@@ -9,4 +9,11 @@ section:
               - size: 100%
                 elements:
                   - name: save-quote
+          - cols:
+              - size: auto
+                size.xs: auto
+                size.sm: auto
+                elements:
+                  - name: go-to-next-page-covers
+                css: u-mt-2
       css: button-width-100 u-mb-3
