Send email to the agent when user accepts the quote

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/offer.accept-existing.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/offer.accept-existing.yml
@@ -1,5 +1,7 @@
 action:
   execution:
+    - IntegrationExecutionRule:
+        integration: send-email-quote-to-client
     - NavigateToDefinitionExecutionRule:
         dynIdElement: policy.contract.policy-id
         page: 2.application.details
