--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/offer.accept.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/definitions/agent/actions/offer.accept.yml
@@ -2,6 +2,8 @@ action:
   execution:
     - IntegrationExecutionRule:
         integration: quotation.register
+    - IntegrationExecutionRule:
+        integration: send-email-quote-to-client
     - NavigateToDefinitionExecutionRule:
         dynIdElement: policy.contract.policy-id
         page: 2.application.details
