Fix calculation on existing application + other fixes

--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/actions/quote.existing.calculate-on-load.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/actions/quote.existing.calculate-on-load.yml
@@ -3,6 +3,10 @@ action:
     - IceLifecycleEventTriggerRule:
         event: ACTIVE_INTEGRATION_SUCCESS
         payload: quotation.load
+    - IceLifecycleEventTriggerRule:
+        event: ACTION_FINISHED
+        payload:
+          action: policy.load
   execution:
     - IntegrationExecutionRule:
         integration: fast-calculation
