--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/sections/insured.next-page-and-modify.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl2121/definitions/term-life/definitions/quote-buy/sections/insured.next-page-and-modify.yml
@@ -1,10 +1,11 @@
 section:
   component:
-    IceFlexSection:
+    IceArrayFlexSection:
+      arrayElement: policy.insured.person-objects
       grid:
         rows:
           - cols:
               - size: 100%
                 elements:
-                  - name: go-to-next-page
+                  - name: policy.insured.person-objects~activity.submit-questions
       css: button-width-small u-mb-3 u-mt-3
